crates/main/amethystate/tests/snapshots/kv__kv_asked_for_a_second_type.snap
---
source: crates/main/amethystate/tests/kv.rs
expression: shape(&err)
---
path `ui.width` is already `u32`, asked for `String`
