crates/main/amethystate/tests/snapshots/kv__kv_asked_for_a_second_type_json.snap
---
source: crates/main/amethystate/tests/kv.rs
expression: shape(&err)
---
the store could not carry out the write
├╴kv cell: ui.width
│
├─▶ the store could not read
│   ├╴file: <store>
│   ╰╴node: ui.width
│
├─▶ the value could not be encoded or decoded
│   ╰╴path: ui.width
│
├─▶ Erased codec error: invalid type: integer `800`, expected a string at line 1 column 3
│
╰─▶ invalid type: integer `800`, expected a string at line 1 column 3
