crates/main/amethystate/tests/snapshots/kv__kv_remove_over_a_declared_field.snap
---
source: crates/main/amethystate/tests/kv.rs
expression: shape(&err)
---
path `typed.port` belongs to the schema at `typed`
╰╴declared by: Typed
